chore: add security configuration
